Controller mixin to do content negotiation and return IIIF version 3 with an enabled presenter

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,3 +13,11 @@ Naming/FileName:
 Bundler/DuplicatedGem:
   Exclude:
     - 'Gemfile'
+
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/support/shared_examples/concerns/iiif_controller_behavior_spec.rb'
+
+RSpec/VerifiedDoubles:
+  Exclude:
+    - 'spec/support/shared_examples/concerns/iiif_controller_behavior_spec.rb'
