FileSetPresenter class provides IIIF Presentation 3 content

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,7 +17,13 @@ Bundler/DuplicatedGem:
 Metrics/BlockLength:
   Exclude:
     - 'spec/support/shared_examples/concerns/iiif_av/controller_behavior_spec.rb'
+    - 'spec/support/shared_examples/concerns/iiif_av/displays_content_spec.rb'
 
 RSpec/VerifiedDoubles:
   Exclude:
     - 'spec/support/shared_examples/concerns/iiif_av/controller_behavior_spec.rb'
+    - 'spec/support/shared_examples/concerns/iiif_av/displays_content_spec.rb'
+
+RSpec/ExampleLength:
+  Exclude:
+    - 'spec/support/shared_examples/concerns/iiif_av/displays_content_spec.rb'
